<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F7FB"
    tools:context=".fragments.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_log_save_path"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="20dp"
            android:textColor="#6F6F6F"
            android:textSize="13sp"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="打印日志位置：/storage/emulated/0/Android/data/com.jieli.otasdk/files/logcat" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_settings_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_log_save_path"
            tools:itemCount="4"
            tools:listitem="@layout/item_settings_simple" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_auto_test"
            android:layout_width="match_parent"
            android:visibility="gone"
            tools:visibility="visible"
            android:layout_height="192dp"
            android:background="@color/bg_white"
            android:gravity="center_vertical"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/rv_settings_list">

            <TextView
                android:id="@+id/tv_auto_test_op_name"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="1dp"
                android:textColor="@color/black_242424"
                android:textSize="15sp"
                android:textStyle="bold"
                android:text="@string/auto_test"
                app:layout_constraintEnd_toStartOf="@+id/sw_auto_test_op"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <com.kyleduo.switchbutton.SwitchButton
                android:id="@+id/sw_auto_test_op"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:minWidth="36dp"
                app:kswBackDrawable="@drawable/bg_settings_switch_btn_selector"
                app:kswThumbColor="@color/text_white"
                app:kswThumbHeight="22dp"
                app:kswThumbRangeRatio="2"
                app:layout_constraintBottom_toBottomOf="@+id/tv_auto_test_op_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_auto_test_op_name"
                app:layout_constraintTop_toTopOf="@+id/tv_auto_test_op_name" />

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#fff4f7fb"
                android:layout_marginStart="20dp"
                app:layout_constraintBottom_toTopOf="@+id/tv_auto_test_input_tip"
                app:layout_constraintTop_toBottomOf="@+id/tv_auto_test_op_name"
                tools:layout_editor_absoluteX="20dp" />

            <TextView
                android:id="@+id/tv_auto_test_input_tip"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginEnd="1dp"
                android:gravity="center_vertical"
                android:paddingStart="20dp"
                android:textColor="@color/black_242424"
                android:textSize="15sp"
                android:textStyle="bold"
                android:text="@string/test_times"
                app:layout_constraintTop_toBottomOf="@+id/tv_auto_test_op_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/tv_auto_test_input_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:drawableEnd="@drawable/ic_file_next"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_auto_test_input_tip"
                app:layout_constraintTop_toTopOf="@+id/tv_auto_test_input_tip"
                app:layout_constraintBottom_toBottomOf="@+id/tv_auto_test_input_tip"
                tools:text="30" />
            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#fff4f7fb"
                android:layout_marginStart="20dp"
                app:layout_constraintBottom_toTopOf="@+id/tv_fault_tolerant_op_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_auto_test_input_tip"
                tools:layout_editor_absoluteX="20dp" />
            <TextView
                android:id="@+id/tv_fault_tolerant_op_name"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="1dp"
                android:gravity="center_vertical"
                android:textColor="@color/black_242424"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/tv_auto_test_input_tip"
                app:layout_constraintEnd_toStartOf="@+id/sw_fault_tolerant_op"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/fault_tolerant"
                />

            <com.kyleduo.switchbutton.SwitchButton
                android:id="@+id/sw_fault_tolerant_op"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:minWidth="36dp"
                app:kswBackDrawable="@drawable/bg_settings_switch_btn_selector"
                app:kswThumbColor="@color/text_white"
                app:kswThumbHeight="22dp"
                app:kswThumbRangeRatio="2"
                app:layout_constraintBottom_toBottomOf="@+id/tv_fault_tolerant_op_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_fault_tolerant_op_name"
                app:layout_constraintTop_toTopOf="@+id/tv_fault_tolerant_op_name" />

            <View
                android:id="@+id/view3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#fff4f7fb"
                android:layout_marginStart="20dp"
                app:layout_constraintBottom_toTopOf="@+id/tv_fault_tolerant_input_tip"
                app:layout_constraintTop_toBottomOf="@+id/tv_fault_tolerant_op_name"
                tools:layout_editor_absoluteX="20dp" />

            <TextView
                android:id="@+id/tv_fault_tolerant_input_tip"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginEnd="1dp"
                android:gravity="center_vertical"
                android:paddingStart="20dp"
                android:textColor="@color/black_242424"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/tv_fault_tolerant_op_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/fault_tolerant_count"
                />

            <TextView
                android:id="@+id/tv_fault_tolerant_input_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:drawableEnd="@drawable/ic_file_next"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_fault_tolerant_input_tip"
                app:layout_constraintTop_toTopOf="@+id/tv_fault_tolerant_input_tip"
                app:layout_constraintBottom_toBottomOf="@+id/tv_fault_tolerant_input_tip"
                tools:text="30" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView
            android:id="@+id/tv_current_communication_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/current_communication_mode"
            android:textColor="#6F6F6F"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_auto_test" />

        <TextView
            android:id="@+id/tv_communication_way_ble"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="9dp"
            android:background="@color/text_white"
            android:gravity="center_vertical"
            android:paddingStart="20dp"
            android:text="BLE"
            android:textColor="#242424"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_current_communication_mode" />

        <ImageView
            android:id="@+id/iv_communication_way_ble"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="23dp"
            android:src="@drawable/choose"
            app:layout_constraintBottom_toBottomOf="@+id/tv_communication_way_ble"
            app:layout_constraintEnd_toEndOf="@+id/tv_communication_way_ble"
            app:layout_constraintTop_toTopOf="@+id/tv_communication_way_ble" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="20dp"
            android:background="#fff4f7fb"
            app:layout_constraintBottom_toBottomOf="@+id/tv_communication_way_ble" />

        <TextView
            android:id="@+id/tv_communication_way_spp"
            android:layout_width="0dp"
            android:layout_height="47dp"
            android:background="@color/text_white"
            android:gravity="center_vertical"
            android:paddingStart="20dp"
            android:text="SPP"
            android:textColor="#242424"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_communication_way_ble" />

        <ImageView
            android:id="@+id/iv_communication_way_spp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="23dp"
            android:src="@drawable/choose"
            app:layout_constraintBottom_toBottomOf="@+id/tv_communication_way_spp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_communication_way_ble" />

        <TextView
            android:id="@+id/tv_change_mtu"
            android:layout_width="0dp"
            android:layout_height="47dp"
            android:layout_marginTop="8dp"
            android:background="@color/text_white"
            android:gravity="center_vertical"
            android:paddingStart="20dp"
            android:text="@string/adjust_mtu"
            android:textColor="#242424"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_communication_way_spp" />

        <TextView
            android:id="@+id/tv_change_mtu_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:drawableEnd="@drawable/ic_file_next"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_change_mtu"
            app:layout_constraintEnd_toEndOf="@+id/tv_change_mtu"
            app:layout_constraintTop_toTopOf="@+id/tv_change_mtu"
            tools:text="30" />

        <TextView
            android:id="@+id/tv_log_file"
            android:layout_width="0dp"
            android:layout_height="47dp"
            android:layout_marginTop="8dp"
            android:background="@color/text_white"
            android:gravity="center_vertical"
            android:paddingStart="20dp"
            android:text="@string/log_files"
            android:textColor="#242424"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_change_mtu" />

        <TextView
            android:id="@+id/tv_log_file_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:drawableEnd="@drawable/ic_file_next"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_log_file"
            app:layout_constraintEnd_toEndOf="@+id/tv_log_file"
            app:layout_constraintTop_toTopOf="@+id/tv_log_file" />

        <TextView
            android:id="@+id/tv_app_version"
            android:layout_width="0dp"
            android:layout_height="47dp"
            android:layout_marginTop="8dp"
            android:background="@color/text_white"
            android:gravity="center_vertical"
            android:paddingStart="20dp"
            android:text="@string/app_version_number"
            android:textColor="#242424"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_log_file" />

        <TextView
            android:id="@+id/tv_app_version_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:textColor="#838383"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv_app_version"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_app_version"
            tools:text="V2.1.0" />

        <TextView
            android:id="@+id/tv_sdk_version_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="#6F6F6F"
            android:textSize="@dimen/text_14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_app_version"
            tools:text="SDK版本号：V1.0.4" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
